@@ -30,8 +30,9 @@ apport (0.120) UNRELEASED; urgency=low
     hooks, not just from common ones.
   * apport/report.py, add_hooks_info(): Do not print an error if a source
     package hook does not exist.
+  * apport/hookutils.py, _parse_gconf_schema(): Correctly handle bool values.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 26 Nov 2008 17:47:42 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 26 Nov 2008 18:11:41 +0100
 
 apport (0.119) intrepid; urgency=low
 
